--- a/public/index.html
+++ b/public/index.html
@@ -19,22 +19,46 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Take Back Day</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="site-root"></div>
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="%PUBLIC_URL%/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ms-icon-144x144.png">
+
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      share data
     -->
+   <meta property="og:url"                content="https://take-back-day.netlify.com" />
+   <meta property="og:type"               content="website" />
+   <meta property="og:title"              content="Clear Your Cabinet on April 28th" />
+   <meta property="og:description"        content="Help fight the opiod crisis by getting rid of unused presription drugs" />
+   <meta property="og:image"              content="https://drive.google.com/file/d/1rhAzgUiYT-ShllbiWsHQIUANaDrb9Hgo/view?usp=sharing" />
+   <title>Clear Your Cabinet</title>
+ </head>
+ <body>
+   <noscript>
+     You need to enable JavaScript to run this app.
+   </noscript>
+   <div id="site-root"></div>
+   <!--
+     This HTML file is a template.
+     If you open it directly in the browser, you will see an empty page.
+
+     You can add webfonts, meta tags, or analytics to this file.
+     The build step will place the bundled scripts into the <body> tag.
+
+     To begin the development, run `npm start` or `yarn start`.
+     To create a production bundle, use `npm run build` or `yarn build`.
+   -->
   </body>
 </html>
