--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,9 @@
    <meta property="og:type"               content="website" />
    <meta property="og:title"              content="Clear Your Cabinet on April 28th" />
    <meta property="og:description"        content="Help fight the opiod crisis by getting rid of unused presription drugs" />
-   <meta property="og:image"              content="https://drive.google.com/file/d/1rhAzgUiYT-ShllbiWsHQIUANaDrb9Hgo/view?usp=sharing" />
+   <meta property="og:image"              content="%PUBLIC_URL%/share-image.png" />
+   <meta property="og:image:width"              content="1375" />
+   <meta property="og:image:height"              content="710" />
    <title>Clear Your Cabinet</title>
  </head>
  <body>
