change url for sharing

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <!--
       share data
     -->
-   <meta property="og:url"                content="https://take-back-day.netlify.com" />
+   <meta property="og:url"                content="https://clearyourcabinet.com" />
    <meta property="og:type"               content="website" />
    <meta property="og:title"              content="Clear Your Cabinet on April 28th" />
    <meta property="og:description"        content="Help fight the opiod crisis by getting rid of unused presription drugs" />
