fix typo in metadata (#40)

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <title>Clear Your Cabinet</title>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -41,11 +42,10 @@
    <meta property="og:url"                content="https://clearyourcabinet.com" />
    <meta property="og:type"               content="website" />
    <meta property="og:title"              content="Clear Your Cabinet on April 28th" />
-   <meta property="og:description"        content="Help fight the opiod crisis by getting rid of unused presription drugs" />
+   <meta property="og:description"        content="Help fight the opioid crisis by getting rid of unused prescription drugs" />
    <meta property="og:image"              content="%PUBLIC_URL%/share-image.png" />
    <meta property="og:image:width"        content="1375" />
    <meta property="og:image:height"       content="710" />
-   <title>Clear Your Cabinet</title>
  </head>
  <body>
    <noscript>
