--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <!--
       share data
     -->
-   <meta property="og:url"                content="https://clearyourcabinet.com" />
+   <meta property="og:url"                content="https://clearyourcabinet.ag.ny.gov" />
    <meta property="og:type"               content="website" />
    <meta property="og:title"              content="Clear Your Cabinet on April 28th" />
    <meta property="og:description"        content="Help fight the opioid crisis by getting rid of unused prescription drugs" />
