--- a/public/index.html
+++ b/public/index.html
@@ -39,11 +39,11 @@
     <!--
       share data
     -->
-   <meta property="og:url"                content="https://clearyourcabinet.ag.ny.gov" />
+   <meta property="og:url"                content="https://clearyourcabinet.com" />
    <meta property="og:type"               content="website" />
    <meta property="og:title"              content="Clear Your Cabinet on April 28th" />
    <meta property="og:description"        content="Help fight the opioid crisis by getting rid of unused prescription drugs" />
-   <meta property="og:image"              content="%PUBLIC_URL%/share-image.png" />
+   <meta property="og:image"              content="https://ag.ny.gov/sites/default/files/share-image.png" />
    <meta property="og:image:width"        content="1375" />
    <meta property="og:image:height"       content="710" />
  </head>
