change copy for next take back day

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     -->
    <meta property="og:url"                content="https://clearyourcabinet.com" />
    <meta property="og:type"               content="website" />
-   <meta property="og:title"              content="Clear Your Cabinet on April 28th" />
+   <meta property="og:title"              content="Clear Your Cabinet" />
    <meta property="og:description"        content="Help fight the opioid crisis by getting rid of unused prescription drugs" />
    <meta property="og:image"              content="https://ag.ny.gov/sites/default/files/share-image.png" />
    <meta property="og:image:width"        content="1375" />
